# satcomsim_federated

./: .gitignore  README.md  core_runner.py  generate_and_add_sats.py  groundstation_service.py  gs_interaction_client.py  launch_london_test_sat.py  pyproject.toml  satellite_service.py  send_add_command.py  simulation_core.py  tui_launcher.py  tui_layout.css  visualizer_vpython.py
scripts/: add_groundstation_client.py  gs_interaction_client.py  launch_groundstation.py  launch_satellite.py  sat_generator.py  send_add_command.py  visualizer_vpython.py
src/core/: simulation_core.py
src/groundstation/: groundstation_service.py
src/satellite/: onboard_software_service.py  satellite_service.py
src/shared/: constants.py  transformations.py
tui/: tui_launcher.py  tui_layout.css
